--- a/estilos.css
+++ b/estilos.css
@@ -389,7 +389,7 @@ input{
 @media only screen and (max-width: 720px){
 
     body{
-        width: 720px;
+        width: 100%;
         height: auto;
         background-color: #FFF;
     }
@@ -558,7 +558,7 @@ input{
     }
     
     .ninja-js_container{
-        width: 720px;
+        width: 100%;
         height: auto;
         padding: 128px 32px;
         gap: 32px;
