--- a/estilos.css
+++ b/estilos.css
@@ -408,9 +408,12 @@ input{
         align-items: center; 
     }
 
-    .logo img{
+    .logo{
         width: 100%;
         height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
     }
 
     .nav-bar{
@@ -418,9 +421,9 @@ input{
         height: auto;
         padding: 0 32px;
         display: flex;
+        gap: inherit;
         flex-direction: row;
         justify-content: space-between;
-        gap: auto;
     }
     
     .hero{
@@ -556,6 +559,7 @@ input{
     .ninja-js{
         width: 100%;
         height: auto;
+        padding: 0;
         background-image: linear-gradient(to bottom, #503D2E ,#33271D);
         display: flex;
         flex-direction: column;
@@ -574,7 +578,7 @@ input{
         border: 1px solid black; 
         border-radius: 16px;
         box-shadow: 0px 16px 32px 0px rgba(22,17,13,1);
-        width: auto;
+        width: 100%;
         height: auto;
         gap: 16px;
         padding: 64px 48px;
