--- a/estilos.css
+++ b/estilos.css
@@ -33,10 +33,13 @@ header{
 .nav-bar{
     padding: 0 32px;
     display: flex;
+    flex-direction: row;
     gap: 32px;
 }
 
 .nav-bar a{
+    width: auto;
+    height: auto;
     text-decoration: none;
     color: #ffff;
     font-family: "Nunito", sans-serif;
@@ -421,9 +424,9 @@ input{
         height: auto;
         padding: 0 32px;
         display: flex;
-        gap: inherit;
         flex-direction: row;
         justify-content: space-between;
+        text-align: center;
     }
     
     .hero{
@@ -636,7 +639,7 @@ input{
     
     .btn{
         width: 100%;
-        height: 72px;
+        height: auto;
     }
 
 }
