--- a/estilos.css
+++ b/estilos.css
@@ -31,6 +31,8 @@ header{
 }
 
 .nav-bar{
+    width: auto;
+    height: auto;
     padding: 0 32px;
     display: flex;
     flex-direction: row;
@@ -411,13 +413,18 @@ input{
         align-items: center; 
     }
 
-    .logo{
-        width: 100%;
+    /* .logo{
+        width: auto;
         height: auto;
         display: flex;
         flex-direction: row;
         justify-content: center;
-    }
+    } */
+/* 
+    .logo img{
+        width: auto;
+        height: auto;
+    } */
 
     .nav-bar{
         width: 100%;
@@ -425,8 +432,9 @@ input{
         padding: 0 32px;
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         justify-content: space-between;
-        text-align: center;
+        text-align: start;
     }
     
     .hero{
@@ -640,6 +648,7 @@ input{
     .btn{
         width: 100%;
         height: auto;
+        text-wrap: wrap;
     }
 
 }
